# src/Dfe.CaseAggregationService.Infrastructure/Gateways/AcademisationApiClient.cs
@@ -1,5 +1,6 @@
 ﻿using Dfe.CaseAggregationService.Domain.Entities.Academisation;
 using Dfe.CaseAggregationService.Domain.Interfaces.Services;
+using Microsoft.AspNetCore.WebUtilities;
 using Microsoft.Extensions.Logging;
 
 namespace Dfe.CaseAggregationService.Infrastructure.Gateways
@@ -14,11 +15,37 @@ namespace Dfe.CaseAggregationService.Infrastructure.Gateways
             
         }
 
-        public async Task<IEnumerable<AcademisationSummary>> GetAcademisationSummaries(string userEmail)
+        public async Task<IEnumerable<AcademisationSummary>> GetAcademisationSummaries(string userEmail, bool includeConversions, bool includeTransfers, bool includeFormAMat, string? searchTerm)
         {
             const string baseUrl = "summary/projects";
 
-            var url = $"{baseUrl}?email={userEmail}";
+            var queryParams = new Dictionary<string, string?>
+            {
+                { "email", userEmail }
+            };
+
+            if (includeConversions)
+            {
+                queryParams.Add("includeConversions", "true");
+            }
+
+            if (includeTransfers)
+            {
+                queryParams.Add("includeTransfers", "true");
+            }
+
+            if (includeFormAMat)
+            {
+                queryParams.Add("includeFormAMat", "true");
+            }
+
+            if (!string.IsNullOrEmpty(searchTerm))
+            {
+                queryParams.Add("searchTerm", searchTerm);
+            }
+
+
+            var url = QueryHelpers.AddQueryString(baseUrl, queryParams);
 
             var result = await Get<IEnumerable<AcademisationSummary>>(url);
 
